--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                 <a href="docs/CV_Tsiferana techno.pdf" class="button1">Télécharger CV</a>
             </div>
         </section>
-        
         <section id="skills">
             <div class="red-divider"></div>
             <div class="heading">
@@ -61,34 +60,39 @@
                     <div class="col-md-6">
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                <h5>HTML/CSS 85%</h5>
+                                <h5>HTML/CSS</h5>
                             </div>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                <h5>PHP/MYSQL 85%</h5>
+                                <h5>PHP/MYSQL</h5>
                             </div>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                <h5>LARAVEL 85%</h5>
+                                <h5>LARAVEL</h5>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                                <h5>WORDPRESS</h5>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                <h5>JAVASCRIPT 85%</h5>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                <h5>JAVASCRIPT</h5>
                             </div>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                <h5>BOOTSTRAP 80%</h5>
+                                <h5>BOOTSTRAP</h5>
                             </div>
                         </div>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                <h5>ANGULAR 80%</h5>
+                                <h5>ANGULAR</h5>
                             </div>
                         </div>
                     </div>
@@ -101,7 +105,7 @@
             <div class="container">
                 <div class="white-divider"></div>
                 <div class="heading">
-                    <h2>Expérience et Recherche</h2>
+                    <h2>Expériences et Recherches</h2>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -109,12 +113,14 @@
                         <div class="timeline-panel-container">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Stage à METFP</h3>
-                                    <h4>Développeur Laravel/Angular</h4>
-                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>2022</p>
+                                    <h3>Freelance</h3>
+                                    <h4>Développeur Wordpress</h4>
+                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 à Aujourd'hui </p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Développer un site web gestion des partenariats</p>
+                                    <p>Maintenance du site wordpress/woocomerce</p>
+                                    <p>Conception et mis en page du site avec elementor</p>
+                                    <p>Gestion des produits en utilisant Woocomerce rest API</p>
                                 </div>
                             </div>
                         </div>
@@ -124,12 +130,12 @@
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>PROJET LARAVEL</h3>
-                                    <h4>Développeur Laravel</h4>
-                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2020-2021</p>
+                                    <h3>Stage à METFP</h3>
+                                    <h4>Développeur Laravel/Angular</h4>
+                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Mars-Aout 2022</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Développer un site web le job</p>
+                                    <p>Développer un site web gestion des partenariats</p>
                                 </div>
                             </div>
                         </div>
@@ -139,13 +145,30 @@
                         <div class="timeline-panel-container">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>PROJET MERISE</h3>
-                                    <h4>Développeur Wordpress</h4>
-                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2019-2020</p>
+                                    <h3>Frontend Award</h3>
+                                    <h4>Html,Css,Javascript</h4>
+                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Septembre 2021</p>
                                 </div>
                                 <div class="timeline-body">
+                                    <p>Développement frontend et l'innovation web</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-badge"><span class="glyphicon glyphicon-briefcase"></span></div>
+                        <div class="timeline-panel-container-inverted">
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h3>Projets Academique</h3>
+                                    <h4>Laravel,Wordpress,Reactjs</h4>
+                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2019-2022</p>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>Création d’un site ''le job'' avec laravel8 PHP</p>
+                                    <p>To do list avec Reactjs</p>
+                                    <p>Jeu bibilava avec Javascript</p>
                                     <p>Creation d’un blog web; Site e-commmerce</p>
-                                    
                                 </div>
                             </div>
                         </div>
