--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CV Tsitsi</title>
+        <title>TsiferanaMasy</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -166,9 +166,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p>Création d’un site ''le job'' avec laravel8 PHP</p>
-                                    <p>To do list avec Reactjs</p>
+                                    <p>Taskify avec Reactjs</p>
                                     <p>Jeu bibilava avec Javascript</p>
-                                    <p>Creation d’un blog web; Site e-commmerce</p>
+                                    <p>Création d’un blog web; Site e-commmerce</p>
                                 </div>
                             </div>
                         </div>
