--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <h3><a href="https://direct-import.re" target="_blank"><img alt="www.Direct-import.re"></a></h3>
+                            <h3><a href="https://direct-import.re" target="_blank">"www.Direct-import.re"</a></h3>
                             <h4>Site d'expédition de la métropole vers La Réunion</h4>
                         </div>
                         <div class="item">
-                            <h3><a href="https://techoffice.re" target="_blank"><img alt="www.Techoffice.re"></a></h3>
+                            <h3><a href="https://techoffice.re" target="_blank">"www.Techoffice.re"</a></h3>
                             <h4>Site de vente de matériel informatique</h4>
                         </div>
                         <div class="item">
-                            <h3><a href="https://Artbatis.re" target="_blank"><img alt="www.Artbatis.re"></a></h3>
+                            <h3><a href="https://Artbatis.re" target="_blank">"www.Artbatis.re"</a></h3>
                             <h4>Plateforme dédiée à la construction et à la rénovation</h4>
                         </div>
                     </div>
