--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Projets Academique</h3>
+                                    <h3>Projets Académiques</h3>
                                     <h4>Laravel,Wordpress,Reactjs</h4>
                                     <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2019-2022</p>
                                 </div>
