--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width:82%">
                                 <h5>LARAVEL</h5>
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width:82%">
                                 <h5>WORDPRESS</h5>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
                                 <h5>ANGULAR</h5>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Projets Académiques</h3>
+                                    <h3>Projets Academique</h3>
                                     <h4>Laravel,Wordpress,Reactjs</h4>
                                     <p class="text-muted"><small class="glyphicon glyphicon-time"></small> 2019-2022</p>
                                 </div>
@@ -179,18 +179,18 @@
                     <h2>Education</h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <div class="education-block">
                             <h5>2018 - 2021</h5>
                             <span class="glyphicon glyphicon-education"></span>
-                            <h3>Institut Supérieur Polytechnique de Madagascar</h3>
+                            <h3>I S P M</h3>
                             <h4>Licence  en Informatique et Télécommunication</h4>
                             <div class="red-divider"></div>
-                            <p>Intelligence Artificielle</p>
-                            <p>Système d'informations</p>
+                            <p>Electronique Système d'Informatique</p>
+                            <p>et Inteligence Artificielle</p>
                         </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <div class="education-block">
                            <h5>2019 - 2020</h5>
                            <span class="glyphicon glyphicon-education"></span>
@@ -201,6 +201,16 @@
                            <p>Responsive Design</p>
                         </div>
                    </div>
+                   <div class="col-sm-4">
+                    <div class="education-block">
+                       <h5>2017-2018</h5>
+                       <span class="glyphicon glyphicon-education"></span>
+                       <h3>Lycée privé Les Orchidées</h3>
+                       <h4>Baccalauréat</h4>
+                       <div class="red-divider"></div>
+                       <p>Terminale D</p>
+                    </div>
+               </div>
                 </div>
             </div>
         </section>
