--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#about">Moi</a></li>
                         <li><a href="#skills">Compétences</a></li>
                         <li><a href="#experience">Expériences</a></li>
-                        <li><a href="#education">Education</a></li>
+                        <li><a href="#education">Formation</a></li>
                         <li><a href="#projet">Projets</a></li>    
                     </ul>
                 </div>      
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="red-divider"></div>
                 <div class="heading">
-                    <h2>Education</h2>
+                    <h2>Formation</h2>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
