--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
+                            <h3><a href="https://easyjob.re" target="_blank">"www.easyjob.re"</a></h3>
+                            <h4>Plateformes de recherche d'emploi</h4>
+                        </div>
+                        <div class="item active">
                             <h3><a href="https://direct-import.re" target="_blank">"www.Direct-import.re"</a></h3>
                             <h4>Site d'expédition de la métropole vers La Réunion</h4>
                         </div>
