--- a/index.html
+++ b/index.html
@@ -225,13 +225,14 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <h3><a href="https://easyjob.re" target="_blank">"www.easyjob.re"</a></h3>
                             <h4>Plateformes de recherche d'emploi</h4>
                         </div>
-                        <div class="item active">
+                        <div class="item">
                             <h3><a href="https://direct-import.re" target="_blank">"www.Direct-import.re"</a></h3>
                             <h4>Site d'expédition de la métropole vers La Réunion</h4>
                         </div>
