--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                                 <h5>ANGULAR</h5>
                             </div>
                         </div>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                <h5>NEXTJS</h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -109,8 +114,8 @@
                         <div class="timeline-panel-container">
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Freelance</h3>
-                                    <h4>Développeur Wordpress</h4>
+                                    <h3>Téletravail chez Atome Développement</h3>
+                                    <h4>Développeur Wordpress/PHP</h4>
                                     <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 à Aujourd'hui </p>
                                 </div>
                                 <div class="timeline-body">
@@ -226,9 +231,14 @@
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                         <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
+                            <h3><a href="https://solution-marketing.fr" target="_blank">"www.solution-marketing.fr"</a></h3>
+                            <h4>Une plateforme de SMS marketing qui permet de gérer tous les utilisateurs ainsi que chaque destinataire</h4>
+                        </div>
+                        <div class="item">
                             <h3><a href="https://easyjob.re" target="_blank">"www.easyjob.re"</a></h3>
                             <h4>Plateformes de recherche d'emploi</h4>
                         </div>
