--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <section id="about" class="container-fluid">
             <div class="col-xs-8 col-md-4 profile-picture">
-                <img src="images/me.jpg" class="img-circle">
+                <img src="images/me.png" class="img-circle">
             </div>
             <div class="heading">
                 <h1>Développeur web</h1>
