--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         
         <section id="about" class="container-fluid">
             <div class="col-xs-8 col-md-4 profile-picture">
-                <img src="images/me.png" class="img-circle">
+                <img src="images/moi.jpg" class="img-circle">
             </div>
             <div class="heading">
                 <h1>Développeur web</h1>
                 <p>Bienvenue sur mon portfolio ! Je suis Tsiferana, un développeur web passionné par la création de solutions numériques innovantes. Mon objectif est de combiner ma créativité, mes compétences techniques et mon expérience pour concevoir des sites web exceptionnels et des applications web interactives.</p>
-                <a href="docs/CV Tsiferana Masy.pdf" class="button1">Télécharger CV</a>
+                <a href="docs/CV_Tsiferana.pdf" class="button1">Télécharger CV</a>
             </div>
         </section>
         
