--- a/index.html
+++ b/index.html
@@ -239,12 +239,16 @@
                             <h4>Une plateforme de SMS marketing qui permet de gérer tous les utilisateurs ainsi que chaque destinataire</h4>
                         </div>
                         <div class="item">
-                            <h3><a href="https://easyjob.re" target="_blank">"www.easyjob.re"</a></h3>
-                            <h4>Plateformes de recherche d'emploi</h4>
+                            <h3><a href="http://univertis.mg/" target="_blank">"univertis.mg/"</a></h3>
+                            <h4>Plateforme offrant des services de qualité dans divers domaines.</h4>
                         </div>
                         <div class="item">
-                            <h3><a href="https://direct-import.re" target="_blank">"www.Direct-import.re"</a></h3>
-                            <h4>Site d'expédition de la métropole vers La Réunion</h4>
+                            <h3><a href="https://www.univertisbtp.mg/" target="_blank">"univertisbtp.mg/"</a></h3>
+                            <h4>Plateforme dédiée à la construction et à la rénovation.</h4>
+                        </div>
+                        <div class="item">
+                            <h3><a href="https://easyjob.re" target="_blank">"www.easyjob.re"</a></h3>
+                            <h4>Plateformes de recherche d'emploi</h4>
                         </div>
                         <div class="item">
                             <h3><a href="https://techoffice.re" target="_blank">"www.Techoffice.re"</a></h3>
