--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="heading">
                 <h1>Développeur web</h1>
                 <p>Bienvenue sur mon portfolio ! Je suis Tsiferana, un développeur web passionné par la création de solutions numériques innovantes. Mon objectif est de combiner ma créativité, mes compétences techniques et mon expérience pour concevoir des sites web exceptionnels et des applications web interactives.</p>
-                <a href="docs/CV_Tsiferana.pdf" class="button1">Télécharger CV</a>
+                <a href="docs/CV Tsiferana.pdf" class="button1">Télécharger CV</a>
             </div>
         </section>
         
