--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3>Téletravail chez Atome Développement</h3>
-                                    <h4>Développeur Wordpress/PHP</h4>
+                                    <h4>Développeur Laravel/Framework Javascript/Wordpress</h4>
                                     <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 à Aujourd'hui </p>
                                 </div>
                                 <div class="timeline-body">
