--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                                     <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 à Aujourd'hui </p>
                                 </div>
                                 <div class="timeline-body">
+                                    <p>Création application web en utilisant Laravel et framework Javascript </p>
                                     <p>Maintenance du site wordpress/woocomerce</p>
                                     <p>Conception et mis en page du site avec elementor</p>
                                     <p>Gestion des produits en utilisant Woocomerce rest API</p>
