--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <div class="timeline-heading">
                                     <h3>Téletravail chez Atome Développement</h3>
                                     <h4>Développeur Laravel/Framework Javascript/Wordpress</h4>
-                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 à Aujourd'hui </p>
+                                    <p class="text-muted"><small class="glyphicon glyphicon-time"></small>Février 2023 - Décembre 2024 </p>
                                 </div>
                                 <div class="timeline-body">
                                     <p>Création application web en utilisant Laravel et framework Javascript </p>
